my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/builtin-prefetch-2.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtin-prefetch-2.c:10:8: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   10 | static stat_int_arr[100];
      | ~~~~~~ ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtin-prefetch-2.c:151:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  151 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtin-prefetch-2.c:151:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
2 errors generated.
